@@ -14,7 +14,6 @@ compile(
     );
 
 execute(
-    fails => $Self->{vlt_all},
     expect_filename => $Self->{golden_filename},
     );
 
