@@ -1,0 +1,13 @@
+// DESCRIPTION: Verilator: Verilog Test data file
+//
+// Copyright 2006 by Wilson Snyder. This program is free software; you can
+// redistribute it and/or modify it under the terms of either the GNU
+// Lesser General Public License Version 3 or the Perl Artistic License
+// Version 2.0.
+// SPDX-License-Identifier: LGPL-3.0-only OR Artistic-2.0
+
+10
+11
+@2
+01
+// Missing additional data
